Recreated Index.html and fixed alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,104 @@
-header{
+body{
+    width:100%;
     margin:0;
+}
+header{
+   background-color: rgb(167, 164, 164);
+   color:black;
 }
 
 /*--------------------------------------------colors---*/
 .navbar-brand{
 color:black;
 }
-.navbar-nav{
-    color:black;
+.navbar{
+    /*background-color: rgb(240, 234, 234);*/
+    background-color: #e7e5e5;
 }
-.PrivateLessons{
-    background-color: bisque;
+.navbar-nav li a{
+    color:black
 }
+.navbar-nav li a:hover{
+    color:rgb(124, 131, 228);
+}
+.privateLessons{
+   /* background-color: rgba(187, 174, 98, 0.705);*/
+   background-color: rgb(233, 216, 172);
+}
+.privateh{
+   font-size: 65px;
+    position: relative;
+    top: 6%;
+    left: 26%;
+    width: 15rem;
+    padding-bottom: 20px;
+}
+.privatep{
+    font-size: 17px;
+    position: relative;
+    top: 14%;
+    left: 26%;
+    padding-bottom: 20px;
+    width: 18rem;
 
-.private{
-    line-height: 15em;
-    font-size: 56px;
 }
+.bookbtn{
+    position: relative;
+    top: 15%;
+    left: 26%;
+}
+/*---------------reviewa alignment----------*/
+.review{
+    background-color:rgb(202, 193, 195);
+    width: 100%;
+    height:500px;
+    position: relative;
+    bottom: -400px;
+}
+.indicatorscss {
+    position: absolute;
+    right: 0;
+    bottom: -70px;
+    left: -80px;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    margin-right: 15%;
+    margin-bottom: 1rem;
+    margin-left: 15%;
+    list-style: none;
+}
+.page-hero {
+    width:33%;
+    background-color: bisque;
+    text-align: center;
+    display: inline-block;
+    
+  }
+  .pimage{
+    width:66%;
+    display: inline-block;
+  }
+ 
 /*--------------------------------------------special padding-margin---*/
 .general-sub{
     font-weight: 300px;
     color:black;
 
 }
-
-/*
-.privatep{
-    line-height: 1.6rem;
-    font-size: 18px
+.text-break{
+    width: 19rem;
 }
-.about{
+.text-truncate{
+    display: inline-block;
+    max-width: 150px;
+}
+.slides{
+    width: 25rem;
+}
+
+/*.about{
     width:25%;
     margin:0;
 }
@@ -43,9 +112,19 @@ color:black;
 }
 .contacth{
     font-size: 32px;
+    padding-top: 43%;
+    padding-left: 15%;
+    width: 20rem;
 }
 .contactp{
     font-size: 18px;
+    padding-top: 20%;
+    padding-left: 15%;
+    width: 20rem;
+}
+.contactform{
+    padding-top: 8%;
+    padding-left: 15%;
 }
 /*
 .submitbtn{
@@ -64,12 +143,11 @@ footer{
     background-color: #e7e5e5;
     color:black;
     min-height: 120px;
-    padding-left: 0px;
-    padding-right: 0px;
+    position: absolute;
+   left:0;
 }
 .footercontact{
-    font-size: 15px;
-    text-align: left;
+    font-size: 17px;
     font-weight: 300px;
 }
 .social-links{
@@ -92,4 +170,132 @@ footer{
 .flex-wrapper { /*------------------------push the footer down on the contact page------*/
     position: relative;
     bottom: -400px;
+  }
+
+  /*------------------------media queries*/
+ 
+    @media screen and (max-width: 1396px)
+    {
+        .privateh{
+            font-size: 50px;
+            position: relative;
+            top: 11%;
+            left: 1%;
+            width: 9rem;
+         }
+         .privatep{
+            font-size: 18px;
+            /* position: relative; */
+            top: 11%;
+            left: 1%;
+            padding-bottom: 71px;
+         }
+         .bookbtn{
+             position: relative;
+             top: 0%;
+             left: 0%;
+             text-align: center;
+         }
+         .contacth{
+            font-size: 32px;
+            padding-top: 32%;
+            padding-left: 15%;
+            width: 19rem;
+        }
+        .contactp{
+            font-size: 18px;
+            padding-top: 32%;
+            padding-left: 15%;
+            width: 19rem;
+        }
+        .contactform{
+            padding-top: 6%;
+            padding-left: 15%;
+        }
+    }
+    
+    @media screen and (max-width: 943px)
+    {
+        .privateh{
+            font-size: 50px;
+            position: relative;
+            top: 10%;
+            left: 15%;
+            /*width: 31rem;*/
+         }
+         .privatep{
+            font-size: 15px;
+            position: relative;
+            top: 7%;
+            left: 16%;
+            padding-bottom: 40px;
+            width: 12rem;
+         }
+         .bookbtn{
+             position: relative;
+             top: -4%;
+             left: 16%;
+         }
+         .contacth{
+            font-size: 32px;
+            padding-top: 35%;
+            padding-left: 15%;
+            width: 19rem;
+        }
+        .contactp{
+            font-size: 18px;
+            padding-top: 32%;
+            padding-left: 15%;
+            width: 19rem;
+        }
+        .contactform{
+            padding-top: 6%;
+            padding-left: 15%;
+        }
+     }
+     @media screen and (max-width: 800px)
+     {
+        
+        .privateh{
+        font-size: 65px;
+         position: relative;
+         top: 5%;
+         left: 8%;
+         width: 19rem;
+        padding-bottom: 53px;
+        margin: 0;
+     }
+     .privatep{
+         font-size: 17px;
+         position: relative;
+         top: 4%;
+         left: 8%;
+         padding-bottom: 50px;
+         text-align: justify;
+     }
+     .bookbtn{
+         position: relative;
+         top: -3%;
+         left: 8%;
+         text-align: center;
+     }
+     .social-links li a i{
+        width: 29px;
+    }
+    .contacth{
+        font-size: 32px;
+        padding-top: 35%;
+        padding-left: 15%;
+        width: 20rem;
+    }
+    .contactp{
+        font-size: 18px;
+       padding-top: 12%;
+        padding-left: 15%;
+        width: 20rem;
+    }
+    .contactform{
+        padding-top: 8%;
+        padding-left: 15%;
+    }
   }
